    + [RA] Relax the regex for matching dh-make-perl boilerplate to catch
      the current text.  Thanks, gregor herrmann.  (Closes: #563571)
  * checks/fields{,.desc}:
    + [RA] Reject "all" and "any" in architecture qualifications for build
      dependencies.  Thanks, Jonathan Yu.
    + [RA] Warn if some architectures in a build relation are negated and
      others are not.

  * lib/Lintian/Collect/Binary.pm:
    + [ADB] Correct a reference in the documentation indicating that the 
      module collects data for source packages.

  * reporting/templates/maintainer.tmpl:
    + [RA] Really fix the logic to optionally display the archive area of
      additional package entries under the same source package.

 -- Russ Allbery <rra@debian.org>  Sun, 03 Jan 2010 13:06:34 -0800

lintian (2.3.1) unstable; urgency=low

  The "goodbye to unpack level 2" release.

  * Summary of tag changes:
    + Added:
      - init.d-script-missing-start
      - debian-news-entry-has-unknown-version
      - debian-news-entry-uses-asterisk
      - debian-news-entry-without-blank-line
      - non-native-package-with-native-version
      - udev-rule-in-etc

  * {checks,collection}/*.desc:
    + [RG] Remove Unpack-Level fields and depend on the 'unpacked'
      collection script as needed.
  * checks/binaries:
    + [RG] Recognise hppa64 binaries and ignore them on the
      binary-from-other-architecture check for hppa.
      Thanks, Matthias Klose.  (Closes: #562788)
  * checks/changelog-file{,.desc}:
    + [RA] Per devref, recommend against NEWS.Debian entries formatted
      with asterisks like changelog entries.
    + [RA] Check that the most recent NEWS.Debian entry is followed by a
      blank line for apt-listchanges.  Thanks, Adeodato Simó.  (Addresses
      the Lintian part of #523436)
    + [RA] Warn if the version of the latest NEWS.Debian entry doesn't
      appear in the changelog.  Thanks, Christoph Berg.  (Closes: #550594)
  * checks/control-file: