@@ -16,6 +16,9 @@ lintian (2.3.2) UNRELEASED; urgency=low
     + [RA] Warn if some architectures in a build relation are negated and
       others are not.
 
+  * lib/Lintian/Collect.pm:
+    + [ADB] Update the documentation to reflect the existence of
+      Lintian::Collect::Binary.
   * lib/Lintian/Collect/Binary.pm:
     + [ADB] Correct a reference in the documentation indicating that the 
       module collects data for source packages.
